# atlas-tdd-dezember-2022

./: README.md
ParameterTestProjekt/: CMakeLists.txt
ParameterTestProjekt/source/games/take_game/players/: computer_player.h
ParameterTestProjekt/tests/: CMakeLists.txt
ParameterTestProjekt/tests/games/take_game/players/: computer_player_test.cpp  computer_player_test.h
PersonenServiceProjekt/: CMakeLists.txt
PersonenServiceProjekt/source/persistence/: person.h  personen_repository.h
PersonenServiceProjekt/source/services/: person_service_impl.cpp  personen_service_exception.h  personen_service_impl.h
PersonenServiceProjekt/tests/: CMakeLists.txt  personen_service_impl_test.cpp  personen_service_impl_test.h
QTEuro2DollarRechner/: mainwindow.ui
QTEuro2DollarRechner/presenter/: euro_to_dollar_presenter.h  euro_to_dollar_presenter_impl.h
QTEuro2DollarRechner/tests/: Mockeuro_to_dollar_calculator.h  euro_to_dollar_presenter_impl_test.cpp  euro_to_dollar_presenter_impl_test.h
QTEuro2DollarRechner/view/: euro_to_dollar_view.h
TDDDemo/: CMakeLists.txt
TDDDemo/source/: Stapel.h  StapelNeu.cpp  StapelNeu.h  ToUpperTranslator.h  Translator.h  TranslatorClient.h  main.cpp
TDDDemo/tests/: CMakeLists.txt  StapelTest.cpp  StapelTest.h  TranslatorClient.cpp  TranslatorClientTest.h
Tag1_01StapelProjekt/: CMakeLists.txt
Tag1_01StapelProjekt/source/: Stapel.cpp  StapelException.h  main.cpp  stapel.h
Tag1_01StapelProjekt/tests/: CMakeLists.txt  StapelTest.cpp  StapelTest.h  demo_test.cpp
Tag1_02SchweineProjekt/tests/: CMakeLists.txt
TakeGameProject/tests/: abstract_game_test.h
